xcgui.h



///@}

/// @defgroup groupLayoutSize 布局大小类型
/// @ingroup macroDefine
/// @{
enum  layout_size_type_
{
	layout_size_type_fixed=0,   ///<指定大小
	layout_size_type_fill,      ///<fill 填充父
	layout_size_type_auto,      ///<auto 自动大小,根据内容计算大小
	layout_size_type_weight,    ///<weight 比例,按照比例分配剩余空间
	layout_size_type_disable,   ///<disable 不使用
};


enum align_type_
{
	align_error=-1,
	align_left=0,
	align_top,
	align_right,
	align_bottom,
	align_center,
};


///@}

///@defgroup Group_adjustLayout    调整布局标识位
///@ingroup  macroDefine
///@{
enum xc_adjustLayout_
{
	xc_adjustLayout_no   = 0x00,  ///<不调整布局
	xc_adjustLayout_all  = 0x01,  ///<强制调整自身和子对象布局.
	xc_adjustLayout_self = 0x02,  ///<只调整自身布局,不调整子对象布局.
};


//字体信息
struct  xc_font_info_i
{
	int   nSize;                 ///<字体大小,单位(pt,磅).
	int   nStyle;                ///<字体样式 xc_fontStyle_i
	wchar_t  name[LF_FACESIZE];  ///<字体名称
};


enum xc_fontStyle_i
{
	xc_fontStyle_regular    = 0,  ///<正常
	xc_fontStyle_bold       = 1,  ///<粗体
	xc_fontStyle_italic     = 2,  ///<斜体
	xc_fontStyle_boldItalic = 3,  ///<粗斜体
	xc_fontStyle_underline  = 4,  ///<下划线
	xc_fontStyle_strikeout  = 8   ///<删除线
};

XC_API void WINAPI XEle_SetDragBorder(HELE hEle, int nFlags);

XC_API void WINAPI XEle_SetDragBorderBindEle(HELE hEle, int nFlags, HELE hBindEle, int nSpace);

XC_API void WINAPI XEle_SetMinSize(HELE hEle, int nWidth, int nHeight);

XC_API void WINAPI XEle_SetMaxSize(HELE hEle, int nWidth, int nHeight);

XC_API void WINAPI XEle_SetLockScroll(HELE hEle, BOOL bHorizon, BOOL bVertical);

XC_API HELE WINAPI XEle_HitChildEle(HELE hEle, in_ POINT  *pPt);

XC_API void WINAPI XEle_SetUserData(HELE hEle, int nData);

XC_API int  WINAPI XEle_GetUserData(HELE hEle);

XC_API void WINAPI XEle_GetContentSize(HELE hEle, out_ SIZE* pSize);

XC_API void WINAPI XEle_SetCapture(HELE hEle, BOOL b);

XC_API void WINAPI XEle_SetLayoutWidth(HELE hEle, layout_size_type_ nType, int nWidth);

XC_API void WINAPI XEle_SetLayoutHeight(HELE hEle, layout_size_type_ nType, int nHeight);

XC_API void WINAPI XEle_GetLayoutWidth(HELE hEle, out_ layout_size_type_ *pType, out_ int *pWidth);

XC_API void WINAPI XEle_GetLayoutHeight(HELE hEle, out_ layout_size_type_ *pType, out_ int *pHeight);

XC_API void WINAPI XEle_RedrawEle(HELE hEle, BOOL bImmediate = FALSE);

XC_API void WINAPI XEle_RedrawRect(HELE hEle, RECT *pRect, BOOL bImmediate = FALSE);

XC_API void WINAPI XEle_Destroy(HELE hEle);  //销毁
XC_API void WINAPI XEle_AddBkBorder(HELE hEle, COLORREF color, BYTE alpha, int width);

XC_API void WINAPI XEle_AddBkFill(HELE hEle, COLORREF color, BYTE alpha);

XC_API void WINAPI XEle_AddBkImage(HELE hEle, HIMAGE hImage);

XC_API int  WINAPI XEle_GetBkInfoCount(HELE hEle);

XC_API void WINAPI XEle_ClearBkInfo(HELE hEle);

XC_API HBKM WINAPI XEle_GetBkManager(HELE hEle);

XC_API HBKM WINAPI XEle_GetBkManagerEx(HELE hEle);

XC_API int  WINAPI XEle_GetStateFlags(HELE hEle); //获取组合状态
XC_API BOOL WINAPI XEle_DrawFocus(HELE hEle, HDRAW hDraw, RECT* pRect);

XC_API void WINAPI XEle_DrawEle(HELE hEle, HDRAW hDraw);

XC_API void WINAPI XEle_EnableTransparentChannel(HELE hEle, BOOL bEnable);

XC_API BOOL WINAPI XEle_SetXCTimer(HELE hEle, UINT nIDEvent, UINT uElapse);

XC_API BOOL WINAPI XEle_KillXCTimer(HELE hEle, UINT nIDEvent);

XC_API void WINAPI XEle_SetToolTip(HELE hEle, const wchar_t* pText);

XC_API void WINAPI XEle_GetToolTip(HELE hEle, out_ wchar_t  *pOut, int nOutLen);

XC_API void WINAPI XEle_PopupToolTip(HELE hEle, int x, int y);

XC_API void WINAPI XEle_AdjustLayout(HELE hEle);

XC_API void WINAPI XEle_AdjustLayoutEx(HELE hEle, int nFlags = xc_adjustLayout_self);

//XC_API BOOL WINAPI XEle_RegEventC_js(HELE hEle, int nEvent, const char* pFunName);
//XC_API BOOL WINAPI XEle_RegEventC1_js(HELE hEle, int nEvent, const char* pFunName);
//XC_API BOOL WINAPI XEle_RegEventC2_js(HELE hEle, int nEvent, const char* pFunName);
XC_API HFONTX WINAPI XFont_Create(int size);//创建字体
XC_API HFONTX WINAPI XFont_Create2(const wchar_t *pName = L"宋体", int size = 12, int style = xc_fontStyle_regular);

XC_API HFONTX WINAPI XFont_Create3(xc_font_info_i*  pInfo);

XC_API HFONTX WINAPI XFont_CreateEx(LOGFONTW *pFontInfo);

XC_API HFONTX WINAPI XFont_CreateFromHFONT(HFONT hFont);

XC_API HFONTX WINAPI XFont_CreateFromFont(void*  pFont);

XC_API HFONTX WINAPI XFont_CreateFromFile(const wchar_t*  pFontFile, int size = 12, int style = xc_fontStyle_regular);

XC_API void   WINAPI XFont_EnableAutoDestroy(HFONTX hFontX, BOOL bEnable);

XC_API void* WINAPI XFont_GetFont(HFONTX hFontX);

XC_API void  WINAPI XFont_GetFontInfo(HFONTX hFontX, out_ xc_font_info_i*  pInfo);

XC_API void  WINAPI XFont_AddRef(HFONTX hFontX);   //增加引用计数
XC_API void  WINAPI XFont_Release(HFONTX hFontX);  //释放引用计数
XC_API int   WINAPI XFont_GetRefCount(HFONTX hFontX);

XC_API void  WINAPI XFont_Destroy(HFONTX hFontX);  //销毁字体
XC_API HWINDOW WINAPI XFrameWnd_Create(int x, int y, int cx, int cy, const wchar_t *pTitle, HWND hWndParent, int XCStyle);  //创建窗口
XC_API HWINDOW WINAPI XFrameWnd_CreateEx(DWORD dwExStyle, wchar_t* lpClassName, wchar_t* lpWindowName, DWORD dwStyle, int x, int y, int cx, int cy, HWND hWndParent, int XCStyle);  //创建窗口
XC_API void WINAPI XFrameWnd_GetLayoutAreaRect(HWINDOW hWindow, out_ RECT *pRect); //获取客户区布局区域坐标
XC_API void WINAPI XFrameWnd_SetView(HWINDOW hWindow, HELE hEle);

XC_API void WINAPI XFrameWnd_SetPaneSplitBarColor(HWINDOW hWindow, COLORREF color, BYTE alpha = 255);

XC_API BOOL WINAPI XFrameWnd_SaveLayoutToFile(HWINDOW hWindow, const wchar_t* pFileName);

XC_API BOOL WINAPI XFrameWnd_LoadLayoutFile(HWINDOW hWindow, HELE* aPaneList, int nEleCount, const wchar_t* pFileName);

XC_API BOOL WINAPI XFrameWnd_AddPane(HWINDOW hWindow, HELE hPaneDest, HELE hPaneNew, align_type_ align);

XC_API BOOL WINAPI XFrameWnd_MergePane(HWINDOW hWindow, HELE hPaneDest, HELE hPaneNew);

XC_API HIMAGE WINAPI XImgSrc_LoadFile(const wchar_t *pImageName);//从文件中加载图片
XC_API HIMAGE WINAPI XImgSrc_LoadFileRect(const wchar_t *pImageName, int x, int y, int cx, int cy);  //加载图片,指定区域
XC_API HIMAGE WINAPI XImgSrc_LoadRes(int id, const wchar_t *pType);//从资源中加载图片
XC_API HIMAGE WINAPI XImgSrc_LoadZip(const wchar_t *pZipFileName, const wchar_t *pImageName, const wchar_t *pPassword = NULL);//从ZIP中加载图片
XC_API HIMAGE WINAPI XImgSrc_LoadZipRect(const wchar_t *pZipFileName, const wchar_t *pImageName, const wchar_t *pPassword, int x, int y, int cx, int cy);

XC_API HIMAGE WINAPI XImgSrc_LoadMemory(void* pBuffer, int nSize);

XC_API HIMAGE WINAPI XImgSrc_LoadMemoryRect(void* pBuffer, int nSize, int x, int y, int cx, int cy);

XC_API HIMAGE WINAPI XImgSrc_LoadFromImage(void *pImage);

XC_API HIMAGE WINAPI XImgSrc_LoadFromExtractIcon(const wchar_t *pImageName);

XC_API HIMAGE WINAPI XImgSrc_LoadFromHICON(HICON hIcon);

XC_API HIMAGE WINAPI XImgSrc_LoadFromHBITMAP(HBITMAP hBitmap);

XC_API void WINAPI XImgSrc_EnableAutoDestroy(HIMAGE hImage, BOOL bEnable); //启用或关闭自动销毁,当与UI元素关联时有效
XC_API int WINAPI XImgSrc_GetWidth(HIMAGE hImage);

XC_API int WINAPI XImgSrc_GetHeight(HIMAGE hImage);

XC_API void WINAPI XImgSrc_AddRef(HIMAGE hImage);

XC_API void WINAPI XImgSrc_Release(HIMAGE hImage);

XC_API int  WINAPI XImgSrc_GetRefCount(HIMAGE hImage);

XC_API void WINAPI XImgSrc_Destroy(HIMAGE hImage);

XC_API HIMAGE WINAPI XImage_LoadFile(const wchar_t *pImageName, BOOL bStretch = FALSE);//从文件中加载图片
XC_API HIMAGE WINAPI XImage_LoadFileAdaptive(const wchar_t *pImageName, int leftSize, int topSize, int rightSize, int bottomSize);//从文件中加载图片
XC_API HIMAGE WINAPI XImage_LoadFileRect(const wchar_t *pImageName, int x, int y, int cx, int cy);  //加载图片,指定区域
XC_API HIMAGE WINAPI XImage_LoadResAdaptive(int id, const wchar_t *pType, int leftSize, int topSize, int rightSize, int bottomSize);//从资源中加载图片
XC_API HIMAGE WINAPI XImage_LoadRes(int id, const wchar_t *pType, BOOL bStretch = FALSE);//从资源中加载图片