xcgui.nim


proc XEle_SetDragBorder*(hEle: HELE; nFlags: cint) {.cdecl,
    importc: "XEle_SetDragBorder", dynlib: xcgui, discardable.}

proc XEle_SetDragBorderBindEle*(hEle: HELE; nFlags: cint; hBindEle: HELE; nSpace: cint) {.
    cdecl, importc: "XEle_SetDragBorderBindEle", dynlib: xcgui, discardable.}

proc XEle_SetMinSize*(hEle: HELE; nWidth: cint; nHeight: cint) {.cdecl,
    importc: "XEle_SetMinSize", dynlib: xcgui, discardable.}

proc XEle_SetMaxSize*(hEle: HELE; nWidth: cint; nHeight: cint) {.cdecl,
    importc: "XEle_SetMaxSize", dynlib: xcgui, discardable.}

proc XEle_SetLockScroll*(hEle: HELE; bHorizon: BOOL; bVertical: BOOL) {.cdecl,
    importc: "XEle_SetLockScroll", dynlib: xcgui, discardable.}

proc XEle_HitChildEle*(hEle: HELE; pPt: ptr POINT): HELE {.cdecl,
    importc: "XEle_HitChildEle", dynlib: xcgui, discardable.}

proc XEle_SetUserData*(hEle: HELE; nData: cint) {.cdecl, importc: "XEle_SetUserData",
    dynlib: xcgui, discardable.}

proc XEle_GetUserData*(hEle: HELE): cint {.cdecl, importc: "XEle_GetUserData",
                                       dynlib: xcgui, discardable.}

proc XEle_GetContentSize*(hEle: HELE; pSize: ptr SIZE) {.cdecl,
    importc: "XEle_GetContentSize", dynlib: xcgui, discardable.}

proc XEle_SetCapture*(hEle: HELE; b: BOOL) {.cdecl, importc: "XEle_SetCapture",
                                        dynlib: xcgui, discardable.}

proc XEle_SetLayoutWidth*(hEle: HELE; nType: layout_size_type; nWidth: cint) {.cdecl,
    importc: "XEle_SetLayoutWidth", dynlib: xcgui, discardable.}

proc XEle_SetLayoutHeight*(hEle: HELE; nType: layout_size_type; nHeight: cint) {.
    cdecl, importc: "XEle_SetLayoutHeight", dynlib: xcgui, discardable.}

proc XEle_GetLayoutWidth*(hEle: HELE; pType: ptr layout_size_type; pWidth: ptr cint) {.
    cdecl, importc: "XEle_GetLayoutWidth", dynlib: xcgui, discardable.}

proc XEle_GetLayoutHeight*(hEle: HELE; pType: ptr layout_size_type; pHeight: ptr cint) {.
    cdecl, importc: "XEle_GetLayoutHeight", dynlib: xcgui, discardable.}

proc XEle_RedrawEle*(hEle: HELE; bImmediate: BOOL = FALSE) {.cdecl,
    importc: "XEle_RedrawEle", dynlib: xcgui, discardable.}

proc XEle_RedrawRect*(hEle: HELE; pRect: ptr RECT; bImmediate: BOOL = FALSE) {.cdecl,
    importc: "XEle_RedrawRect", dynlib: xcgui, discardable.}

proc XEle_Destroy*(hEle: HELE) {.cdecl, importc: "XEle_Destroy", dynlib: xcgui, discardable.}
## 销毁


proc XEle_AddBkBorder*(hEle: HELE; color: COLORREF; alpha: BYTE; width: cint) {.cdecl,
    importc: "XEle_AddBkBorder", dynlib: xcgui, discardable.}

proc XEle_AddBkFill*(hEle: HELE; color: COLORREF; alpha: BYTE) {.cdecl,
    importc: "XEle_AddBkFill", dynlib: xcgui, discardable.}

proc XEle_AddBkImage*(hEle: HELE; hImage: HIMAGE) {.cdecl, importc: "XEle_AddBkImage",
    dynlib: xcgui, discardable.}

proc XEle_GetBkInfoCount*(hEle: HELE): cint {.cdecl, importc: "XEle_GetBkInfoCount",
    dynlib: xcgui, discardable.}

proc XEle_ClearBkInfo*(hEle: HELE) {.cdecl, importc: "XEle_ClearBkInfo", dynlib: xcgui, discardable.}

proc XEle_GetBkManager*(hEle: HELE): HBKM {.cdecl, importc: "XEle_GetBkManager",
                                        dynlib: xcgui, discardable.}

proc XEle_GetBkManagerEx*(hEle: HELE): HBKM {.cdecl, importc: "XEle_GetBkManagerEx",
    dynlib: xcgui, discardable.}

proc XEle_GetStateFlags*(hEle: HELE): cint {.cdecl, importc: "XEle_GetStateFlags",
    dynlib: xcgui, discardable.}
## 获取组合状态


proc XEle_DrawFocus*(hEle: HELE; hDraw: HDRAW; pRect: ptr RECT): BOOL {.cdecl,
    importc: "XEle_DrawFocus", dynlib: xcgui, discardable.}

proc XEle_DrawEle*(hEle: HELE; hDraw: HDRAW) {.cdecl, importc: "XEle_DrawEle",
    dynlib: xcgui, discardable.}

proc XEle_EnableTransparentChannel*(hEle: HELE; bEnable: BOOL) {.cdecl,
    importc: "XEle_EnableTransparentChannel", dynlib: xcgui, discardable.}

proc XEle_SetXCTimer*(hEle: HELE; nIDEvent: UINT; uElapse: UINT): BOOL {.cdecl,
    importc: "XEle_SetXCTimer", dynlib: xcgui, discardable.}

proc XEle_KillXCTimer*(hEle: HELE; nIDEvent: UINT): BOOL {.cdecl,
    importc: "XEle_KillXCTimer", dynlib: xcgui, discardable.}

proc XEle_SetToolTip*(hEle: HELE; pText: ptr WCHAR) {.cdecl,
    importc: "XEle_SetToolTip", dynlib: xcgui, discardable.}

proc XEle_GetToolTip*(hEle: HELE; pOut: ptr WCHAR; nOutLen: cint) {.cdecl,
    importc: "XEle_GetToolTip", dynlib: xcgui, discardable.}

proc XEle_PopupToolTip*(hEle: HELE; x: cint; y: cint) {.cdecl,
    importc: "XEle_PopupToolTip", dynlib: xcgui, discardable.}

proc XEle_AdjustLayout*(hEle: HELE) {.cdecl, importc: "XEle_AdjustLayout",
                                   dynlib: xcgui, discardable.}

#~ proc XEle_AdjustLayoutEx*(hEle: HELE; nFlags: cint = xc_adjustLayout_self) {.cdecl,
    #~ importc: "XEle_AdjustLayoutEx", dynlib: xcgui, discardable.}
## BOOL  XEle_RegEventC_js(HELE hEle, int nEvent, const char* pFunName);
## BOOL  XEle_RegEventC1_js(HELE hEle, int nEvent, const char* pFunName);
## BOOL  XEle_RegEventC2_js(HELE hEle, int nEvent, const char* pFunName);

#~ XFont_Create(int, size)
#~ ## 创建字体

#~ XFont_Create2(`const`, wchar_t * pName = L, "宋体", int, size = 12, int,
              #~ style = xc_fontStyle_regular)
#~ XFont_Create3(xc_font_info_i * pInfo)
#~ XFont_CreateEx(LOGFONTW * pFontInfo)
#~ XFont_CreateFromHFONT(HFONT, hFont)
#~ XFont_CreateFromFont(void * pFont)
#~ XFont_CreateFromFile(`const`, wchar_t * pFontFile, int, size = 12, int,
                     #~ style = xc_fontStyle_regular)

proc XFont_EnableAutoDestroy*(hFontX: HFONTX; bEnable: BOOL) {.cdecl,
    importc: "XFont_EnableAutoDestroy", dynlib: xcgui, discardable.}

proc XFont_GetFont*(hFontX: HFONTX): pointer {.cdecl, importc: "XFont_GetFont",
    dynlib: xcgui, discardable.}

proc XFont_GetFontInfo*(hFontX: HFONTX; pInfo: ptr xc_font_info_i) {.cdecl,
    importc: "XFont_GetFontInfo", dynlib: xcgui, discardable.}

proc XFont_AddRef*(hFontX: HFONTX) {.cdecl, importc: "XFont_AddRef", dynlib: xcgui, discardable.}
## 增加引用计数


proc XFont_Release*(hFontX: HFONTX) {.cdecl, importc: "XFont_Release", dynlib: xcgui, discardable.}
## 释放引用计数


proc XFont_GetRefCount*(hFontX: HFONTX): cint {.cdecl, importc: "XFont_GetRefCount",
    dynlib: xcgui, discardable.}

proc XFont_Destroy*(hFontX: HFONTX) {.cdecl, importc: "XFont_Destroy", dynlib: xcgui, discardable.}
## 销毁字体


proc XFrameWnd_Create*(x: cint; y: cint; cx: cint; cy: cint; pTitle: ptr WCHAR;
                      hWndParent: HWND; XCStyle: cint): HWINDOW {.cdecl,
    importc: "XFrameWnd_Create", dynlib: xcgui, discardable.}
## 创建窗口


proc XFrameWnd_CreateEx*(dwExStyle: DWORD; lpClassName: ptr WCHAR;
                        lpWindowName: ptr WCHAR; dwStyle: DWORD; x: cint; y: cint;
                        cx: cint; cy: cint; hWndParent: HWND; XCStyle: cint): HWINDOW {.
    cdecl, importc: "XFrameWnd_CreateEx", dynlib: xcgui, discardable.}
## 创建窗口


proc XFrameWnd_GetLayoutAreaRect*(hWindow: HWINDOW; pRect: ptr RECT) {.cdecl,
    importc: "XFrameWnd_GetLayoutAreaRect", dynlib: xcgui, discardable.}
## 获取客户区布局区域坐标


proc XFrameWnd_SetView*(hWindow: HWINDOW; hEle: HELE) {.cdecl,
    importc: "XFrameWnd_SetView", dynlib: xcgui, discardable.}

proc XFrameWnd_SetPaneSplitBarColor*(hWindow: HWINDOW; color: COLORREF;
                                    alpha: BYTE = 255) {.cdecl,
    importc: "XFrameWnd_SetPaneSplitBarColor", dynlib: xcgui, discardable.}

proc XFrameWnd_SaveLayoutToFile*(hWindow: HWINDOW; pFileName: ptr WCHAR): BOOL {.
    cdecl, importc: "XFrameWnd_SaveLayoutToFile", dynlib: xcgui, discardable.}

proc XFrameWnd_LoadLayoutFile*(hWindow: HWINDOW; aPaneList: ptr HELE; nEleCount: cint;
                              pFileName: ptr WCHAR): BOOL {.cdecl,
    importc: "XFrameWnd_LoadLayoutFile", dynlib: xcgui, discardable.}

proc XFrameWnd_AddPane*(hWindow: HWINDOW; hPaneDest: HELE; hPaneNew: HELE;
                       align: align_type): BOOL {.cdecl,
    importc: "XFrameWnd_AddPane", dynlib: xcgui, discardable.}

proc XFrameWnd_MergePane*(hWindow: HWINDOW; hPaneDest: HELE; hPaneNew: HELE): BOOL {.
    cdecl, importc: "XFrameWnd_MergePane", dynlib: xcgui, discardable.}

proc XImgSrc_LoadFile*(pImageName: ptr WCHAR): HIMAGE {.cdecl,
    importc: "XImgSrc_LoadFile", dynlib: xcgui, discardable.}
## 从文件中加载图片


proc XImgSrc_LoadFileRect*(pImageName: ptr WCHAR; x: cint; y: cint; cx: cint; cy: cint): HIMAGE {.
    cdecl, importc: "XImgSrc_LoadFileRect", dynlib: xcgui, discardable.}
## 加载图片,指定区域


proc XImgSrc_LoadRes*(id: cint; pType: ptr WCHAR): HIMAGE {.cdecl,
    importc: "XImgSrc_LoadRes", dynlib: xcgui, discardable.}
## 从资源中加载图片


proc XImgSrc_LoadZip*(pZipFileName: ptr WCHAR; pImageName: ptr WCHAR;
                     pPassword: ptr WCHAR = nil): HIMAGE {.cdecl,
    importc: "XImgSrc_LoadZip", dynlib: xcgui, discardable.}
## 从ZIP中加载图片


proc XImgSrc_LoadZipRect*(pZipFileName: ptr WCHAR; pImageName: ptr WCHAR;
                         pPassword: ptr WCHAR; x: cint; y: cint; cx: cint; cy: cint): HIMAGE {.
    cdecl, importc: "XImgSrc_LoadZipRect", dynlib: xcgui, discardable.}

proc XImgSrc_LoadMemory*(pBuffer: pointer; nSize: cint): HIMAGE {.cdecl,
    importc: "XImgSrc_LoadMemory", dynlib: xcgui, discardable.}

proc XImgSrc_LoadMemoryRect*(pBuffer: pointer; nSize: cint; x: cint; y: cint; cx: cint;
                            cy: cint): HIMAGE {.cdecl,
    importc: "XImgSrc_LoadMemoryRect", dynlib: xcgui, discardable.}

proc XImgSrc_LoadFromImage*(pImage: pointer): HIMAGE {.cdecl,
    importc: "XImgSrc_LoadFromImage", dynlib: xcgui, discardable.}

proc XImgSrc_LoadFromExtractIcon*(pImageName: ptr WCHAR): HIMAGE {.cdecl,
    importc: "XImgSrc_LoadFromExtractIcon", dynlib: xcgui, discardable.}

proc XImgSrc_LoadFromHICON*(hIcon: HICON): HIMAGE {.cdecl,
    importc: "XImgSrc_LoadFromHICON", dynlib: xcgui, discardable.}

proc XImgSrc_LoadFromHBITMAP*(hBitmap: HBITMAP): HIMAGE {.cdecl,
    importc: "XImgSrc_LoadFromHBITMAP", dynlib: xcgui, discardable.}

proc XImgSrc_EnableAutoDestroy*(hImage: HIMAGE; bEnable: BOOL) {.cdecl,
    importc: "XImgSrc_EnableAutoDestroy", dynlib: xcgui, discardable.}
## 启用或关闭自动销毁,当与UI元素关联时有效


proc XImgSrc_GetWidth*(hImage: HIMAGE): cint {.cdecl, importc: "XImgSrc_GetWidth",
    dynlib: xcgui, discardable.}

proc XImgSrc_GetHeight*(hImage: HIMAGE): cint {.cdecl, importc: "XImgSrc_GetHeight",
    dynlib: xcgui, discardable.}

proc XImgSrc_AddRef*(hImage: HIMAGE) {.cdecl, importc: "XImgSrc_AddRef", dynlib: xcgui, discardable.}

proc XImgSrc_Release*(hImage: HIMAGE) {.cdecl, importc: "XImgSrc_Release",
                                     dynlib: xcgui, discardable.}

proc XImgSrc_GetRefCount*(hImage: HIMAGE): cint {.cdecl,
    importc: "XImgSrc_GetRefCount", dynlib: xcgui, discardable.}

proc XImgSrc_Destroy*(hImage: HIMAGE) {.cdecl, importc: "XImgSrc_Destroy",
                                     dynlib: xcgui, discardable.}

proc XImage_LoadFile*(pImageName: ptr WCHAR; bStretch: BOOL = FALSE): HIMAGE {.cdecl,
    importc: "XImage_LoadFile", dynlib: xcgui, discardable.}
## 从文件中加载图片


proc XImage_LoadFileAdaptive*(pImageName: ptr WCHAR; leftSize: cint; topSize: cint;
                             rightSize: cint; bottomSize: cint): HIMAGE {.cdecl,
    importc: "XImage_LoadFileAdaptive", dynlib: xcgui, discardable.}
## 从文件中加载图片


proc XImage_LoadFileRect*(pImageName: ptr WCHAR; x: cint; y: cint; cx: cint; cy: cint): HIMAGE {.
    cdecl, importc: "XImage_LoadFileRect", dynlib: xcgui, discardable.}
## 加载图片,指定区域


proc XImage_LoadResAdaptive*(id: cint; pType: ptr WCHAR; leftSize: cint;
                            topSize: cint; rightSize: cint; bottomSize: cint): HIMAGE {.
    cdecl, importc: "XImage_LoadResAdaptive", dynlib: xcgui, discardable.}
## 从资源中加载图片


proc XImage_LoadRes*(id: cint; pType: ptr WCHAR; bStretch: BOOL = FALSE): HIMAGE {.cdecl,
    importc: "XImage_LoadRes", dynlib: xcgui, discardable.}
## 从资源中加载图片

